feat: added clear-all button feat: disable ui elements over eliminating elements

--- a/src/VerseSampler.css
+++ b/src/VerseSampler.css
@@ -28,3 +28,20 @@
     color: black;
   }
 }
+
+.setting-disabled {
+  opacity: 0.5;
+}
+
+.tool-bar {
+  display: flex;
+  gap: 10px; /* Adjust as needed */
+  align-items: center;
+}
+
+.lang-bar {
+  display: flex;
+  gap: 10px; /* Adjust as needed */
+  align-items: center;
+}
+
