feat: added hint feature

--- a/src/VerseValidator.css
+++ b/src/VerseValidator.css
@@ -58,7 +58,7 @@
   font-size: 15px;
 }
 
-.answer-button-box {
+.verse-validator-button-box {
   display: flex;
   gap: 10px;
   padding-top: 10px;
